<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tim1"/>

            <TextView
                android:id="@+id/txt_point_merah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:text="@string/point"/>

            <Button
                android:id="@+id/btn_tambah3_merah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_tiga"
                android:backgroundTint="@color/Oren"
                android:textColor="@color/Putih"/>

            <Button
                android:id="@+id/btn_tambah2_merah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_dua"
                android:backgroundTint="@color/Oren"
                android:textColor="@color/Putih"/>

            <Button
                android:id="@+id/btn_free_merah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:backgroundTint="@color/Oren"
                android:textColor="@color/Putih"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tim1"/>

            <TextView
                android:id="@+id/txt_point_putih"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:text="@string/point"/>

            <Button
                android:id="@+id/btn_tambah3_putih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_tiga"
                android:backgroundTint="@color/Oren"
                android:textColor="@color/Putih"/>

            <Button
                android:id="@+id/btn_tambah2_putih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_dua"
                android:backgroundTint="@color/Oren"
                android:textColor="@color/Putih"/>

            <Button
                android:id="@+id/btn_free_putih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:backgroundTint="@color/Oren"
                android:textColor="@color/Putih"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        android:backgroundTint="@color/Oren"
        android:textColor="@color/Putih"/>

</RelativeLayout>